Fixed feedback button wrapping issue in IE7; Fixed IEEE Xplorer tab top bar positioning in IE7; Increased margin for tab section.

--- a/media/css/lightbox.css
+++ b/media/css/lightbox.css
@@ -234,7 +234,7 @@ input.text {
 }
 
 #lightbox .resources-lightbox-content ul.nootabs-menus li.end-group-menu {
-    margin-right: 30px;
+    margin-right: 41px;
 }
 
 
